test/libsolidity/syntaxTests/constructor/constructor_override.sol
contract C {
    constructor() override {}
}
// ----
// TypeError: (17-42): Constructors cannot override.
